Refactored DTF to solve a clipping issue.  All still working at this stage.

--- a/records/app/src/main/scss/general.scss
+++ b/records/app/src/main/scss/general.scss
@@ -197,17 +197,17 @@
 }
 
 .document-text-field {
-    & > .document-caret {
+    .document-caret {
         -fx-stroke: red;
     }
-    & .document-selection {
+    .document-selection {
         -fx-fill: $focus-color;
         -fx-stroke: null;
     }
-    & > .fade-overlay {
+    .fade-overlay {
         -fx-fill: transparent;
     }
-    & > .document-text-flow > .document-text {
+    .document-text-flow > .document-text {
         -fx-fill: black;
     }
 }
